--- a/openApiDocs/beta/DirectoryObjects.yml
+++ b/openApiDocs/beta/DirectoryObjects.yml
@@ -202,7 +202,7 @@ paths:
   '/directoryObjects/{directoryObject-id}/microsoft.graph.checkMemberGroups':
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action checkMemberGroups
       description: 'Check for membership in a specified list of group IDs, and return from that list those groups (identified by IDs) of which the specified user, group, service principal, organizational contact, device, or directory object is a member. This function is transitive. You can check up to a maximum of 20 groups per request. This function supports all groups provisioned in Microsoft Entra ID. Because Microsoft 365 groups cannot contain other groups, membership in a Microsoft 365 group is always direct.'
       externalDocs:
@@ -258,7 +258,7 @@ paths:
   '/directoryObjects/{directoryObject-id}/microsoft.graph.checkMemberObjects':
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action checkMemberObjects
       operationId: directoryObject_checkMemberObject
       parameters:
@@ -310,7 +310,7 @@ paths:
   '/directoryObjects/{directoryObject-id}/microsoft.graph.getMemberGroups':
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action getMemberGroups
       description: 'Return all the group IDs for the groups that the specified user, group, service principal, organizational contact, device, or directory object is a member of. This function is transitive. This API returns up to 11,000 group IDs. If more than 11,000 results are available, it returns a 400 Bad Request error with the DirectoryResultSizeLimitExceeded error code. If you get the DirectoryResultSizeLimitExceeded error code, use the List group transitive memberOf API instead.'
       externalDocs:
@@ -366,7 +366,7 @@ paths:
   '/directoryObjects/{directoryObject-id}/microsoft.graph.getMemberObjects':
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action getMemberObjects
       operationId: directoryObject_getMemberObject
       parameters:
@@ -418,7 +418,7 @@ paths:
   '/directoryObjects/{directoryObject-id}/microsoft.graph.restore':
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action restore
       description: 'Restore a recently deleted application, externalUserProfile, group, pendingExternalUserProfile, servicePrincipal, administrative unit, or user object from deleted items. If an item was accidentally deleted, you can fully restore the item. This isn''t applicable to security groups, which are deleted permanently. Also, restoring an application doesn''t restore the associated service principal automatically. You must call this API to explicitly restore the deleted service principal. A recently deleted item remains available for up to 30 days. After 30 days, the item is permanently deleted.'
       externalDocs:
@@ -434,20 +434,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: directoryObject
-      requestBody:
-        description: Action parameters
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                autoReconcileProxyConflict:
-                  type: boolean
-                  default: false
-                  nullable: true
-              additionalProperties:
-                type: object
-        required: true
       responses:
         2XX:
           description: Success
@@ -485,7 +471,7 @@ paths:
   /directoryObjects/microsoft.graph.delta():
     get:
       tags:
-        - directoryObjects.Functions
+        - directoryObjects.directoryObject
       summary: Invoke function delta
       description: 'Get newly created, updated, or deleted directory objects without performing a full read of the entire directoryObject collection. For more information about the delta function, see Use delta query to track changes in Microsoft Graph data for details.'
       externalDocs:
@@ -558,7 +544,7 @@ paths:
   /directoryObjects/microsoft.graph.getByIds:
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action getByIds
       description: 'Return the directory objects specified in a list of IDs. Some common uses for this function are to:'
       externalDocs:
@@ -611,7 +597,7 @@ paths:
   /directoryObjects/microsoft.graph.getUserOwnedObjects:
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action getUserOwnedObjects
       description: 'Retrieve a list of recently deleted application and group objects owned by the specified user. This API returns up to 1,000 deleted objects owned by the user, sorted by ID, and doesn''t support pagination.'
       externalDocs:
@@ -647,7 +633,7 @@ paths:
   /directoryObjects/microsoft.graph.validateProperties:
     post:
       tags:
-        - directoryObjects.Actions
+        - directoryObjects.directoryObject
       summary: Invoke action validateProperties
       description: "Validate that a Microsoft 365 group's display name or mail nickname complies with naming policies.  Clients can use this API to determine whether a display name or mail nickname is valid before trying to create a Microsoft 365 group. For validating properties of an existing group, use the validateProperties function for groups. The following validations are performed for the display name and mail nickname properties: \n1. Validate the prefix and suffix naming policy\n2. Validate the custom banned words policy\n3. Validate the mail nickname is unique This API returns with the first failure encountered. If one or more properties fail multiple validations, only the property with the first validation failure is returned. However, you can validate both the mail nickname and the display name and receive a collection of validation errors if you are only validating the prefix and suffix naming policy."
       externalDocs:
